# image-gen-pipe-v2

./: .claude-current-status  .env.backup  .env.example  .eslintignore  .gitignore  .modal-models-cache.json  .remarkignore  .tdd-persephone-status.md  CLAUDE.md  NSFW_CLEANUP_REPORT.md  README.md  TESTING.md  beam-search-flowchart.md  cleanup-nsfw.sh  demo-beam-search.js  demo-prompt-fidelity.js  demo-single-iteration.js  demo.js  eslint.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  server.mjs  test-local-storage.js  test-multi-image-ranking.js  test-negative-prompt-generation.js  test-output-after.txt  test-output-before.txt
.claude/: settings.json
.claude/learnings/: 2025-10.md  2025-11.md  2025-12.md  2026-02.md
archive/: IMAGE-GENERATION-COST-FIX.md  VERIFICATION-COMPLETE.md
archive/cli-demos/: demo-beam-search.js  demo-prompt-fidelity.js  demo-token-tracking.js  test-ensemble-debug.js
deploy/: API-KEY-SECURITY.md  POST-DEPLOYMENT-CHECKLIST.md  README.md  SECURITY-AUDIT.md  finish-setup.sh  linode-setup.sh  linode-stackscript.sh  update.sh
docs/: API-KEY-PROXY-IMPLEMENTATION.md  BATCH_API_IMPLEMENTATION_GUIDE.md  BEAM_SEARCH_ALGORITHM.md  CLOUD_DEPLOYMENT.md  COMMAND_CATALOG.md  COST-ESTIMATION-INDEX.md  COST-TRACKING-IMPLEMENTATION.md  CUSTOM_MODEL_UPLOAD.md  FACE_FIXING.md  FACE_FIXING_TESTS.md  FLEX_PRICING_STRATEGY.md  FLUX_LOCAL_ENCODERS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_PROVIDERS_SUMMARY.md  MODAL_DYNAMIC_MODEL_POPULATION.md  MODEL_SELECTION_GUIDE.md  PERSEPHONE_LOCAL_ENCODERS.md  PROVIDER_STORAGE_SPEC.md  PROVIDER_SWITCHING.md  STOP_LOCK.md  TDD-IMPLEMENTATION-SUMMARY.md  TDD-MODEL-SELECTION.md  TOKEN-TRACKING-SUMMARY.md  VIDEO_QUICK_START.md  VIDEO_UI_INTEGRATION.md  WAN_VIDEO_SETUP.md  architecture-diagram.md  beam-search-refactoring-analysis.md  cost-estimation-breakdown.md  encoder-debugging.md  encoder-path-fix.md  local-providers-porting-guide.md  model-calls-checklist.md  settings-ui-refactor-plan.md  streaming-parallel-architecture.md  tdd-vlm-llm-plan.md  token-tracking-flow.md
docs-site/: changelog.md  index.md
docs-site/api/: providers.md  rest-api.md  websocket-api.md
docs-site/concepts/: beam-search-algorithm.md  streaming-parallel-architecture.md  what-how-prompts.md
docs-site/development/: contributing.md
docs-site/getting-started/: quickstart.md
examples/: video-generation-example.js
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.test.jsx
public/: comparison.html  demo.css  demo.html  demo.js  evaluation.html  testing.html  testing.js
scripts/: gpu-setup.sh  nvidia-persistence.service  retrospective.js  session-history.js
services/: README.md  chroma_service.py  encoder_loading.py  face_fixing.py  flux_service.py  llm_service.py  modal_diffusion_service.py  modal_model_manager.py  pyproject.toml  requirements.txt  update_dmd_config.py  upscaler.py  vision_service.py  vlm_service.py  wan_video_service.py
services/encoders/: config.json
services/encoders/vae/: config.json
services/tests/: __init__.py  test_face_fixing.py  test_modal_diffusion_service.py  test_modal_negative_prompts.py  test_upscaler.py
session-history/: .last-save
session-history/2025-10-31/: session-001-215434-retrospective-20251030-2154.txt
test/: api-chain-visualization.test.js  api-demo-rate-limiting.test.js  api-image-serving.test.js  api-jobs.test.js  api-key-validation.test.js  api-server.test.js  api-video-routes.test.js  api-websocket.test.js  beam-search-worker-apikey.test.js  ci-monitoring.test.js  demo-beam-search.test.js  demo-lineage.test.js  demo-reconnection.test.js  demo-single-iteration.test.js  flux-persephone-encoders.test.js  global-ranking.test.js  integration-api-key.test.js  provider-apikey.test.js  provider-factory.test.js  tdd-model-selection.test.js  test-utils.js
(+420 files in other folders)
